<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/team_a"
                android:textColor="@color/textColor"
                android:textSize="@dimen/textTeamDimen" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textSize="@dimen/scoreDimen" />

            <Button
                android:onClick="threePointsA"
                android:text="@string/_3_points"
                style="@style/CustomButtonStyle"/>

            <Button
                android:onClick="twoPointsA"
                android:text="@string/_2_points"
                style="@style/CustomButtonStyle"/>

            <Button
                android:onClick="freeThrowA"
                android:text="@string/free_throw"
                style="@style/CustomButtonStyle"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray"/>

            <Button
                android:onClick="foulsForTeamA"
                android:text="@string/fouls"
                style="@style/CustomButtonStyle"/>

            <TextView
                android:id="@+id/fouls_a_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="10"
                android:textSize="@dimen/foulsDimen"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/team_b"
                android:textColor="@color/textColor"
                android:textSize="@dimen/textTeamDimen" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="3"
                android:textSize="@dimen/scoreDimen" />

            <Button
                android:onClick="threePointsB"
                android:text="@string/_3_points"
                style="@style/CustomButtonStyle"/>

            <Button
                android:onClick="twoPointsB"
                android:text="@string/_2_points"
                style="@style/CustomButtonStyle"/>

            <Button
                android:onClick="freeThrowB"
                android:text="@string/free_throw"
                style="@style/CustomButtonStyle"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray"/>

            <Button
                android:onClick="foulsForTeamB"
                android:text="@string/fouls"
                style="@style/CustomButtonStyle"/>

            <TextView
                android:id="@+id/fouls_b_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="10"
                android:textSize="@dimen/foulsDimen"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"
        android:text="@string/reset" />

</RelativeLayout>

